--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <title>SH0RT.C1RCU1T</title>
 </head>
 <body>
+  <div id="landing">
+    <div id="container">
+      <div id="game-board"></div>
+    </div>
+  </div>
   <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
