Added h1 to display game name at top of page. #1

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
   <link rel="stylesheet" href="styles.css"/>
+  <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono|VT323" rel="stylesheet"/>
   <title>SH0RT.C1RCU1T</title>
 </head>
 <body>
   <div id="landing">
     <div id="container">
+      <h1>SH0RT.C1RCU1T</h1>
       <div id="game-board"></div>
     </div>
   </div>
