--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <div id="landing">
     <div id="container">
       <h1>SH0RT.C1RCU1T</h1>
-      <div id="game-board"></div>
+      <div id="game-board">
+      </div>
     </div>
   </div>
   <script type="text/javascript" src="main.js"></script>
