--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 </head>
 <body>
   <div id="landing">
+    <div id="game-board"></div>
     <div id="container">
-      <h1>SH0RT.C1RCU1T</h1>
-      <div id="game-board">
-      </div>
+        <h1>/-/ SH0RT.C1RCU1T /+/</h1>
     </div>
   </div>
   <script type="text/javascript" src="main.js"></script>
