Created a start button that displays the board and then disappears. #1

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="game-board"></div>
     <div id="container">
         <h1>/-/ SH0RT.C1RCU1T /+/</h1>
+        <button id="start-button">GAME START</button>
     </div>
   </div>
   <script type="text/javascript" src="main.js"></script>
