--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <div id="landing">
     <div id="container">
       <div id="game-board"></div>
-
-        <button id="start-button">GAME START</button>
+      <button id="start-button" class="game-button">GAME START</button>
+      <button id="move-charge" class="game-button">PUSH CHARGE</button>
     </div>
   </div>
   <script type="text/javascript" src="main.js"></script>
