--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="container">
       <div id="game-board"></div>
       <button id="start-button" class="game-button">GAME START</button>
-      <button id="move-charge" class="game-button">PUSH CHARGE</button>
+      <div id="charge-button-slot"></div>
     </div>
   </div>
   <script type="text/javascript" src="main.js"></script>
