--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <div id="container">
       <div id="game-board"></div>
       <button id="start-button" class="game-button">GAME START</button>
+      <div id="timer-slot">
+        <span id="timer-text" class="timer-display"></span>
+        <span id="countdown" class="timer-display"></span>
+      </div>
       <div id="charge-button-slot"></div>
     </div>
   </div>
