Slightly adjusted instructions text and list item margins for better readability. #3

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ol>
           <li class="instructions">Restore the damaged circuit by reconnecting the data stream source to it’s destination.</li>
           <li class="instructions">Click on two circuit blocks to swap their locations and make a path.</li>
-          <li class="instructions">Dead circuits are too badly damaged and cannot be moved; you’ll have to work around them.</li>
+          <li class="instructions">Dead circuits are too badly damaged to be moved. You’ll have to work around them.</li>
           <li class="instructions">If the timer runs out and the charge cannot advance, the circuit board will be fried!</li>
         </ol>
       </div>
