Created a framework to show the instructions next to a demo board before the game starts. #3

--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
         <span id="timer-text" class="timer-display"></span>
         <span id="countdown" class="timer-display"></span>
       </div>
-      <div id="how-to-play-container">
-        <h3 id="instructions-title" class="instructions">HOW TO PLAY</h3>
-        <ul>
-          <li class="instructions">Restore the damaged circuit by reconnecting the data stream source to it’s destination.</li>
-          <li class="instructions">Click on two circuit blocks to swap their locations and make a path.</li>
-          <li class="instructions">Dead circuits are too badly damaged to be moved. You’ll have to work around them.</li>
-          <li class="instructions">If the timer runs out and the charge cannot advance, the circuit board will be fried!</li>
-        </ul>
+      <div id="instructions-and-demo">
+        <div id="how-to-play-container">
+          <h3 id="instructions-title" class="instructions">HOW TO PLAY</h3>
+          <ul>
+            <li class="instructions">Restore the damaged circuit by reconnecting the data stream source to it’s destination.</li>
+            <li class="instructions">Click on two circuit blocks to swap their locations and make a path.</li>
+            <li class="instructions">Dead circuits are too badly damaged to be moved. You’ll have to work around them.</li>
+            <li class="instructions">If the timer runs out and the charge cannot advance, the circuit board will be fried!</li>
+          </ul>
+        </div>
+        <div id="game-board-demo"></div>
       </div>
       <button id="start-button" class="game-button">GAME START</button>
       <div id="charge-button-slot"></div>
