--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>SH0RT.C1RCU1T</title>
 </head>
 <body>
-  <h1>/-/ SH0RT.C1RCU1T /+/</h1>
+  <h1 id="main-title">/-/ SH0RT.C1RCU1T /+/</h1>
   <div id="landing">
     <div id="container">
       <div id="game-board"></div>
