Added title container to prevent title from being moved to bottom of body. #26

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>SH0RT.C1RCU1T</title>
 </head>
 <body>
-  <h1 id="main-title">/-/ SH0RT.C1RCU1T /+/</h1>
+  <span id="title-container"><h1 id="main-title">/-/ SH0RT.C1RCU1T /+/</h1></span>
   <div id="landing">
     <div id="container">
       <div id="game-board"></div>
