Changed the src of the main script from main to bundle.js. #28

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -33,6 +33,6 @@
       <div id="charge-button-slot"></div>
     </div>
   </div>
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
